🐛 fix(effort): use Locale.ROOT in decimal formatting to avoid locale-dependent output
String.format with %.1f used the JVM default locale, producing "5,2"
on es_ES systems instead of "5.2". Switch to String.format(Locale.ROOT, ...)
to guarantee dot as decimal separator regardless of JVM locale.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>